correction des bugs (visibles sur firefox)

--- a/Display/Carte/DCarte.css
+++ b/Display/Carte/DCarte.css
@@ -5,3 +5,8 @@ bottom:0;
 left:0;
 right:0;
 }
+
+#map {
+	width:100%;
+	height:100%;
+}
